# cian-analyzer

./: .bandit  .dockerignore  .env.example  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  .vercelignore  ADAPTIVE_PARSING_ARCHITECTURE.md  ADAPTIVE_PARSING_QUICKSTART.md  ADDING_NEWS_SOURCES.md  ANALOGS_ENHANCEMENT.md  ANALOGS_VISUAL_GUIDE.txt  API_DOCS.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ASYNC_QUEUE_QUICKSTART.md  BLOG_PARSER_FIX.md  BLOG_README.md  BREADCRUMBS_UPDATE_COMPLETE.md  CALCULATOR_ARCHITECTURE.md  CALCULATOR_LOGIC_FIX.md  CHANGELOG.md  CHANGELOG_COMPARATIVE_ANALYSIS.md  CHECK_TOKEN_TYPE.md  CLAUDE.md  CLAUDE_CODE_DEPLOY.md  CODEBASE_ANALYSIS.md  CODE_REVIEW_REPORT.md  COMPARATIVE_ANALYSIS_REFACTORING.md  COMPARISON_ANALYSIS.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_REVIEW.md  CRITICAL_FIX_REPORT.md  DEPLOY.md  DEPLOYMENT.md  DEPLOYMENT_COMPLETED.md  DEPLOYMENT_FORMATTING_FIX.md  DEPLOYMENT_OPTIONS.md  DEPLOYMENT_PLAN.md  (+247 more)
.claude/: README.md
.github/: README.md
_archive/: ACTIONABLE_DEPLOYMENT_GUIDE.md  ADAPTIVE_PARSING_IMPLEMENTATION_REPORT.md  ADD_REDIS_INSTRUCTIONS.md  ADVANCED_QUICKSTART.md  ASYNC_QUEUE_QUICKSTART.md  AUTO_DEPLOY_SETUP.md  BEST_SOLUTIONS.md  CALCULATOR_ARCHITECTURE.md  CIAN_STYLE_INTERFACE.md  CLAUDE_CODE_DEPLOY.md  COEFFICIENTS_FIX_SUMMARY.md  CREATE_GITHUB_ISSUES.md  CREATE_PR_NOW.md  DASHBOARD_README.md  DEPLOYMENT_ADAPTIVE_PARSER.md  DEPLOYMENT_DECISION.md  DEPLOYMENT_READY.md  DEPLOYMENT_REPORT.md  DEPLOYMENT_SUCCESS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_CHECKLIST_v2.1.0.md  DEPLOY_NOW.md  DEPLOY_PRODUCTION_NOW.md  DEPLOY_SPEC.md  ENHANCED_VERSION_READY.md  EXPORT_DEPLOY_STATUS.md  FINAL_FIX_REPORT.md  FINAL_SOLUTION.md  FINAL_SUMMARY.md  FIXES_COMPLETE_REPORT.md  FIX_STUDIO_PARSING.md  FRONTEND_UPDATE_SUMMARY.md  HOTFIX_BEAUTIFULSOUP.md  IMPLEMENTATION_GUIDE.md  IMPROVEMENTS_SUMMARY.md  LAUNCH_CHECKLIST.md  MANUAL_BLOG_PARSE.md  MANUAL_TEST_GUIDE.md  MANUAL_TEST_REPORT.md  MARKDOWN_FEATURE_COMPLETE.md  (+42 more)
data/: blog_articles.json
docs/: DEPLOYMENT_GUIDE_UI_IMPROVEMENTS.md  FINAL_COMPREHENSIVE_AUDIT_3_ITERATIONS.md  HOUSLER_MANUAL_TESTING_REPORT.md  UI_IMPROVEMENTS_SPECIFICATION.md  adaptive_parsing.md
examples/: example_usage.py  multi_source_search_example.py
lambda/: README.md  handler.py  lambda_parser.py  proxy_manager.py  requirements.txt  template.yaml
monitoring/: README.md  check_health.sh  dashboard.html  prometheus.yml
nginx/: README.md  nginx.conf
scripts/: auto-deploy.sh  check-status.sh  deploy-production.sh  deploy.sh  diagnose.sh  explore_domclick.py  parse-rss-cron.sh  parse-rss-docker.sh  post_deploy_check.sh  quick-restart.sh  quick_test_domclick.py  run_full_test_suite.sh  setup-production-server.sh  setup-yandex-art.sh
src/: __init__.py  cian_parser.py  cian_parser_breadcrumbs.py  cian_parser_enhanced.py  cian_parser_nodriver.py  cian_parser_playwright.py  cian_parser_stealth.py  cian_parser_with_similar.py  dashboard_with_parser.py  exceptions.py  export_logs.py  iopaint_client.py  markdown_exporter.py  txt_exporter.py  watermark_remover.py  web_dashboard.py  web_dashboard_old.py  web_dashboard_pro.py  web_dashboard_unified.py
static/: manifest.json  robots.txt  yandex_a22640ce66beb879.html
systemd/: rss-parser.service  rss-parser.timer
templates/: _footer.html  _metrika.html  advertising_consent.html  blog_index.html  blog_post.html  consent.html  docs_agents.html  docs_clients.html  docs_index.html  docs_realtors.html  index.html  mining.html  monitoring.html  privacy_policy.html  report.html  wizard.html
tests/: README.md  TEST_LOGS.txt  TEST_LOGS_ALL.txt  __init__.py  conftest.py  test_adaptive_parsing_basic.py  (+15 more)
(+153 files in other folders)
